--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ body{
 }
 .title{
     font-size: 10vw;
-    font-family: 'Barracuda';
+    font-family: 'barracudabold';
     text-transform: uppercase;
     font-weight: strong;
 }
