--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,29 @@
 
 @font-face {
     font-family: 'barracudabold';
-    src: url('barracuda-bold-webfont.woff2') format('woff2'),
-         url('barracuda-bold-webfont.woff') format('woff');
+    src: url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-bold-webfont.woff2') format('woff2'),
+         url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'barracudabold_italic';
-    src: url('barracuda-bolditalic-webfont.woff2') format('woff2'),
-         url('barracuda-bolditalic-webfont.woff') format('woff');
+    src: url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-bolditalic-webfont.woff2') format('woff2'),
+         url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-bolditalic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'barracudaitalic';
-    src: url('barracuda-italic-webfont.woff2') format('woff2'),
-         url('barracuda-italic-webfont.woff') format('woff');
+    src: url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-lightitalic-webfont.woff2') format('woff2'),
+         url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'barracuda_regular';
+    src: url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-regular-webfont.woff2') format('woff2'),
+         url('https://github.com/imveeru/imveeru.github.io/blob/main/assets/fonts/barracuda-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
