--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@
 }
 
 body{
-    overflow: hidden;
     font-family: kenoky_light;
+    background:#1b1b1b
 }
 .loader{
     position: absolute;
@@ -81,6 +81,7 @@ body{
     left: 0;
     width: 100%;
     height: 100vh;
+    background-color: #1b1b1b;
 }
 .content{
     position: absolute;
@@ -89,12 +90,51 @@ body{
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: #1b1b1b;
+    background-image:url(/assets/images/web\ new.jpg);
     flex-direction: column;
     color: #f5e0bb;
-    overflow: hidden;
     z-index: 50;
 }
+
+a{
+    text-decoration: none;
+}
+
+.dummy{
+    font-size:20em
+}
+
+#nav-bar{
+    top:-50px;
+    margin:20px 50px 20px 10px;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: #f5e0bb;
+    z-index: 51;
+    transition: top 0.3s;
+}
+#nav-bar .menu-items{
+    display: flex;
+    list-style: none;
+    margin-right: 40px;
+}
+
+#nav-bar .menu-items li{
+    margin-left: 20px;
+}
+#nav-bar .menu-items li a{
+    color: #f5e0bb;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: lighter;
+}
+.active{
+    text-decoration: underline;
+}
+
 .title{
     font-size: 10vw;
     font-family: barracudabold,'Helvetica Neue';
