--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ a{
 
 #nav-bar{
     top:-50px;
-    margin:20px 50px 20px 10px;
+    padding:20px 50px 20px 10px;
     position: fixed;
     display: flex;
     align-items: center;
@@ -123,6 +123,7 @@ a{
     color: var(--sandal);
     z-index: 51;
     transition: top 0.3s;
+    background:var(--black)
 }
 #nav-bar .menu-items{
     display: flex;
