--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body{
 .content{
     position: absolute;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100vh;
@@ -108,14 +108,10 @@ a{
     text-decoration: none;
 }
 
-.dummy{
-    font-size:20em
-}
-
 #nav-bar{
-    top:-50px;
-    padding:20px 50px 20px 10px;
-    position: fixed;
+    top:50px;
+    padding:20px 10px 20px 10px;
+    /* position: fixed; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -123,21 +119,24 @@ a{
     color: var(--sandal);
     z-index: 51;
     transition: top 0.3s;
-    background:var(--black)
+    background:var(--black);
 }
 #nav-bar .menu-items{
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
     list-style: none;
-    margin-right: 40px;
+    /* margin-right: 40px; */
 }
 
 #nav-bar .menu-items li{
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 #nav-bar .menu-items li a{
     color: var(--sandal);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: lighter;
 }
 .active{
