--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ a{
 #nav-bar .menu-items li a{
     color: var(--sandal);
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 3vw;
     font-weight: lighter;
 }
 .active{
