--- a/styles2.css
+++ b/styles2.css
@@ -3,12 +3,29 @@
     padding:0;
 }
 
+h1{
+    margin:0;
+    padding:0;
+}
+
 :root {
     --sandal: #f5e0bb;
     --white: #ffffff;
     --black:#1b1b1b;
-    --padding_lr:5em;
-    --padding_tb:1em;
+    --padding_lr:4vw;
+    --padding_tb:1vw;
+}
+
+body{
+    background:var(--black)
+    
+}
+
+.container{
+    padding:0 var(--padding_lr);
+    display: flex;
+    flex-direction: column;
+    gap:1.5vw;
 }
 
 @font-face {
@@ -18,13 +35,22 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Canopee';
+    src: url('/assets/fonts/Canopee-Regular.woff2') format('woff2'),
+        url('/assets/fonts/Canopee-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .nav-bar{
     background:var(--black);
     color: var(--sandal);
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding:var(--padding_tb) var(--padding_lr);
+    padding:var(--padding_tb) 0;
 }
 .navbar-img{
     width:10%;
@@ -33,5 +59,52 @@
 
 .navbar-txt, .navbar-menu{
     font-family: kenoky_light;
-    font-size:2em;
+    font-size:2vw;
+}
+
+.content {
+    padding:var(--padding_tb) 0;
+    display: flex;
+    flex-direction:column;
+}
+
+.title{
+    font-size:16.5vw;
+    font-family:'Canopee';
+    color: var(--black);
+    padding:0vw 1vw;
+    background-color: var(--sandal);
+    /* border-radius: 10px; */
+}   
+
+.about{
+    display: grid;
+    grid-template-columns:repeat(2,50%);
+    padding:2vw 0;
+    grid-gap:4vw;
+    overflow: hidden;
+}
+
+.description{
+    font-size:1.3vw;
+    color: var(--sandal);
+    font-family:'Space Mono';   
+    text-align: justify;
+    text-justify: inter-word;
+
+    overflow: hidden;
+}
+
+.banner-img{
+    border: 0.3vw solid var(--sandal);
+    object-fit: cover;
+    width:90%;
+    height:60%;
+
+}
+.subtitle{
+    font-size:10.2vw;
+    font-family:'Canopee';
+    color:var(--sandal);
+    margin-top: -10vw;
 }
