--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,8 @@ body{
 }
 
 .hero{
-    height:100vh;
+    /* height:100vh; */
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
