--- a/page.css
+++ b/page.css
@@ -1,4 +1,6 @@
 /* Generated on: Thu Oct 28 2021 14:00:57 GMT+0000 (Coordinated Universal Time) */
+
+/*line num 4061*/
 /* ==========================================================================
    normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
    ========================================================================== */
@@ -18,6 +20,29 @@ body {
   color: #333;
   font-size: 14px;
   line-height: 20px;
+}
+
+.hand-wave{
+  display: none;
+  width:4vw;
+  transform: scaleX(-1);
+  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s;        /* Change to speed up or slow down */
+  animation-iteration-count: infinite;  /* Never stop waving :) */
+  transform-origin: 70% 70%;       /* Pivot around the bottom-left palm */
+  /* display: inline-block; */
+  margin: 0px 15px 0px 10px ;
+}
+
+@keyframes wave-animation {
+  0% { transform: rotate( 0.0deg) }
+ 10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+ 20% { transform: rotate(-8.0deg) }
+ 30% { transform: rotate(14.0deg) }
+ 40% { transform: rotate(-4.0deg) }
+ 50% { transform: rotate(10.0deg) }
+ 60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+100% { transform: rotate( 0.0deg) }
 }
 
 .heading {
@@ -4059,19 +4084,19 @@ body {
 }
 
 .overlay-image-anim.izclean {
-  background-color: #2b252e;
+  background-color: rgba(246, 242, 216, 0.1);
 }
 
 .overlay-image-anim.molitor {
-  background-color: #2b252e;
+  background-color: rgba(246, 242, 216, 0.1);
 }
 
 .overlay-image-anim.blablafoot {
-  background-color: #2b252e;
+  background-color: rgba(246, 242, 216, 0.1);
 }
 
 .overlay-image-anim.beige-10 {
-  background-color: #2b252e;
+  background-color: rgba(246, 242, 216, 0.1);
 }
 
 .overlay-image-anim.rotate {
@@ -4410,8 +4435,8 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: letter-spacing 200ms ease, color 200ms cubic-bezier(.86, 0, .07, 1);
-  transition: letter-spacing 200ms ease, color 200ms cubic-bezier(.86, 0, .07, 1);
+  -webkit-transition: letter-spacing 200ms ease, color 200ms ;
+  transition: letter-spacing 200ms ease, color 200ms ;
   font-size: 64px;
   line-height: 80px;
   cursor: none;
