--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
   /* outline:2px red solid; */
 }
 body {
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
   font-size: 14px;
@@ -51,7 +51,7 @@ body {
   padding-left: 41px;
   background-color: transparent;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  color: #2816f3;
+  color: #1e1e1e;
   font-size: 45px;
   line-height: 55px;
   font-weight: 600;
@@ -99,7 +99,7 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .h1-white {
@@ -264,7 +264,7 @@ body {
 
 .h4-white.left.stroke {
   border: 1px none #000;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 60px;
   line-height: 60px;
 }
@@ -677,7 +677,7 @@ body {
   border-color: #f6f2d8;
   background-color: #f6f2d8;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   line-height: 14px;
   font-weight: 500;
   letter-spacing: 1px;
@@ -722,7 +722,7 @@ body {
 .navbar.solid {
   z-index: 500;
   border-bottom: 1px solid #f6f2d8;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   box-shadow: none;
   cursor: none;
 }
@@ -838,7 +838,7 @@ body {
   display: none;
   width: 0px;
   height: 0px;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .nav-container {
@@ -1103,7 +1103,7 @@ body {
   width: auto;
   height: 1px;
   margin-top: 0px;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   opacity: 1;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
@@ -1117,7 +1117,7 @@ body {
 .mask-blue.image {
   border-style: solid;
   border-width: 10px;
-  border-color: #2148e6;
+  border-color: #1e1e1e;
 }
 
 .mask-blue.ipad-var {
@@ -2470,7 +2470,7 @@ body {
   width: 70px;
   height: 70px;
   margin-top: -173px;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .div-rotate-title.hidden.var {
@@ -2769,7 +2769,7 @@ body {
   z-index: 2;
   width: 1%;
   height: 100%;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   -webkit-perspective-origin: 100% 50%;
   perspective-origin: 100% 50%;
   -webkit-transform-origin: 100% 50%;
@@ -2814,7 +2814,7 @@ body {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .image-19 {
@@ -3711,7 +3711,7 @@ body {
   width: 90vw;
   margin-right: 5vw;
   margin-left: 5vw;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   background-image: none;
 }
 
@@ -3857,7 +3857,7 @@ body {
   -ms-flex-pack: center;
   justify-content: center;
   border-top: 1px solid #f6f2d8;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   cursor: none;
 }
 
@@ -3997,7 +3997,7 @@ body {
   bottom: 0%;
   z-index: 3;
   padding-bottom: 0px;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .anim-title-beige.beige {
@@ -4018,7 +4018,7 @@ body {
   right: 0%;
   bottom: 0%;
   z-index: 4;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .molitor-title-overlay-2 {
@@ -4059,7 +4059,7 @@ body {
   right: 0%;
   bottom: 0%;
   display: none;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
   opacity: 1;
 }
 
@@ -4286,8 +4286,8 @@ body {
   right: 0%;
   bottom: 0%;
   z-index: 2;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#2148e6), color-stop(24%, rgba(33, 72, 230, 0.91)), to(rgba(33, 72, 230, 0)));
-  background-image: linear-gradient(0deg, #2148e6, rgba(33, 72, 230, 0.91) 24%, rgba(33, 72, 230, 0));
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#1e1e1e), color-stop(24%, rgba(33, 72, 230, 0.91)), to(rgba(33, 72, 230, 0)));
+  background-image: linear-gradient(0deg, #1e1e1e, rgba(33, 72, 230, 0.91) 24%, rgba(33, 72, 230, 0));
 }
 
 .row-izclean-exploration {
@@ -4423,7 +4423,7 @@ body {
   margin-left: 0px;
   padding: 0px;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 6vw;
   line-height: 6vw;
   font-weight: 600;
@@ -4527,7 +4527,7 @@ body {
   -webkit-transition: letter-spacing 200ms ease;
   transition: letter-spacing 200ms ease;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 18px;
   line-height: 1em;
   font-weight: 600;
@@ -4577,7 +4577,7 @@ body {
   margin-left: 0px;
   padding: 0px;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 4vw;
   line-height: 1em;
   font-weight: 500;
@@ -4633,7 +4633,7 @@ body {
   -ms-grid-row-align: center;
   align-self: center;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 1.8vw;
   line-height: 1em;
   font-weight: 500;
@@ -4675,7 +4675,7 @@ body {
   -ms-flex-align: stretch;
   align-items: stretch;
   border-bottom: 1px solid #f6f2d8;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .div-menu-default {
@@ -4877,7 +4877,7 @@ body {
   right: 0%;
   bottom: 0%;
   height: 4px;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 .link-block-project-square {
@@ -5020,7 +5020,7 @@ body {
   -ms-flex-align: center;
   align-items: center;
   font-family: Inter, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 16px;
   font-weight: 300;
 }
@@ -5060,14 +5060,14 @@ body {
   align-items: center;
   border-style: solid none solid solid;
   border-width: 1px;
-  border-color: #2148e6;
+  border-color: #1e1e1e;
   background-color: #f6f2d8;
 }
 
 .repeat-text-style {
   position: relative;
   font-family: roc-grotesk-wide, sans-serif;
-  color: #2148e6;
+  color: #1e1e1e;
   font-size: 3.17vw;
   line-height: 44px;
   font-weight: 500;
@@ -5124,7 +5124,7 @@ body {
   display: none;
   width: 50%;
   height: 100%;
-  background-color: #2148e6;
+  background-color: #1e1e1e;
 }
 
 @media screen and (min-width: 1280px) {
@@ -5249,8 +5249,8 @@ body {
   }
 
   .overlay-gradient {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(#2148e6), color-stop(24%, rgba(33, 72, 230, 0.91)), to(rgba(33, 72, 230, 0)));
-    background-image: linear-gradient(0deg, #2148e6, rgba(33, 72, 230, 0.91) 24%, rgba(33, 72, 230, 0));
+    background-image: -webkit-gradient(linear, left bottom, left top, from(#1e1e1e), color-stop(24%, rgba(33, 72, 230, 0.91)), to(rgba(33, 72, 230, 0)));
+    background-image: linear-gradient(0deg, #1e1e1e, rgba(33, 72, 230, 0.91) 24%, rgba(33, 72, 230, 0));
   }
 }
 
@@ -5399,6 +5399,7 @@ body {
     width: 100vw;
     margin-right: 0px;
     margin-left: 0px;
+    margin-bottom:5vh;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -5602,7 +5603,7 @@ body {
   .navbar-2 {
     width: 100vw;
     height: 80px;
-    background-color: #2148e6;
+    background-color: #1e1e1e;
   }
 
   .div-menu-default {
@@ -6131,7 +6132,7 @@ body {
   }
 
   .navbar.solid {
-    background-color: #2148e6;
+    background-color: #1e1e1e;
   }
 
   .logo {
@@ -6655,7 +6656,7 @@ body {
     border-style: none none none solid;
     border-width: 0px 0px 0px 1px;
     border-color: #000 #000 #000 #f6f2d8;
-    background-color: #2148e6;
+    background-color: #1e1e1e;
     box-shadow: none;
     opacity: 1;
   }
@@ -7395,7 +7396,7 @@ body {
   }
 
   .navbar.solid {
-    background-color: #2148e6;
+    background-color: #1e1e1e;
   }
 
   .logo {
