--- a/style.css
+++ b/style.css
@@ -71,7 +71,10 @@ body {
     width: 3rem;
     height: 3rem;
     border-radius: 50px;
-    background-color: #fff;
+    /* background-color: #fff; */
+    border-color: #fff;
+    border-style: solid;
+    border-width: 2px;
     transition: 0.3%;
     transform: translate(-50%,-50%);
     pointer-events: none;
@@ -82,3 +85,85 @@ body {
 /* #hero:hover .cursor{
     transform: scale(10);
 } */
+
+/* preloader */
+
+h1.header {
+	font-family: "Bigilla" !important;
+	font-size: 200px;
+	text-transform: uppercase;
+	font-weight: bolder;
+	width: 90%;
+}
+
+
+.titles {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+h1 {
+	font-weight: 500;
+	font-size: 240px;
+	font-family: "Barracuda" !important;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+ul.titles {
+	display: flex;
+}
+
+ul.blocks {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	list-style: none;
+	justify-content: center;
+	align-items: center;
+}
+
+li.block {
+	height: 100vh;
+}
+
+.block-1 {
+	width: 0.2%;
+	margin: 0 10px;
+	background: #da0510;
+}
+
+.block-2 {
+	width: 1.4%;
+	margin: 0 200px 0 20px;
+	background: #2001fe;
+}
+
+.block-3 {
+	width: 0.8%;
+	margin: 0 40px;
+	background: #01fefe;
+}
+
+.block-4 {
+	width: 2%;
+	margin: 0 400px;
+	background: #00fe00;
+}
+
+.block-5 {
+	width: 0.8%;
+	margin: 0 20px;
+	background: #f4f315;
+}
+
+.block-6 {
+	width: 2.8%;
+	background: #fa04f9;
+}
