--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 html {
     scroll-behavior: smooth;
+	cursor: none;
 }
 
 .fixed-row {
@@ -68,14 +69,15 @@ body {
 
 .cursor{
     position: fixed;
-    width: 0.1rem;
-    height: 0.1rem;
+    width: 0.75rem;
+    height: 0.75rem;
     border-radius: 50px;
-    /* background-color: #fff; */
-    border-color: #fff;
+    background-color: #fff;
+    /* border-color:rgba(255, 255, 0, );
     border-style: solid;
-    border-width: 2px;
-    transition: 2%;
+    border-width: 8px; */
+	cursor: none;
+	transition: 2%;
     transform: translate(-50%,-50%);
     pointer-events: none;
     mix-blend-mode: exclusion;
